2012-03-21        Tony Fischetti    tony.fischetti@gmail.com

* conform to Vogel's 2004 one-color modification for different test array

* more conformity with PEP-8 standards


2012-02-22  Tony Fischetti  tony.fischetti@gmail.com

* not much to report


2012-02-21	Tony Fischetti	tony.fischetti@gmail.com

* streamlined code to conform to PEP-8 standards (mostly)

* all lines are less than 100 characters

* import configuration *as* cnf so as to not pollute namespace

* prepended all configuration variables with "cnf."



2012-02-13	Tony Fischetti	tony.fischetti@gmail.com

* almost done (see TODO for missing functionality)



2012-02-13	Tony Fischetti	tony.fischetti@gmail.com

* first changlog

* everything until now (no changes to report here) [see git changes]